# android-archiver

./: settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/libzip/outputs/: CTestTestfile.cmake  cmake_install.cmake  config.h  libzip-targets.cmake  libzip.pc
app/src/main/cpp/libzip/outputs/examples/: CTestTestfile.cmake  cmake_install.cmake
app/src/main/cpp/libzip/outputs/lib/: CTestTestfile.cmake  cmake_install.cmake
app/src/main/cpp/libzip/outputs/man/: CTestTestfile.cmake  cmake_install.cmake
app/src/main/cpp/libzip/outputs/ossfuzz/: CTestTestfile.cmake  cmake_install.cmake
app/src/main/cpp/libzip/outputs/src/: CTestTestfile.cmake  cmake_install.cmake
app/src/main/java/com/example/myapplication/: HomeScreen.kt  MainActivity.kt
app/src/main/java/com/example/myapplication/ui/theme/: Theme.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
